apps/staging/dapr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "dapr-dashboard-ingress"
  namespace: dapr-system
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging-dns"
    cert-manager.io/acme-challenge-type: dns01
spec:
  ingressClassName: apisix
  tls:
    - hosts:
        - dapr.hetzner.vapepay.store
      secretName: dapr-dashboard-cert
  rules:
    - host: "dapr.hetzner.vapepay.store"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "dapr-dashboard"
                port:
                  number: 8080
